# pydantic-tracing

./: .cta.json  .env.example  .gitignore  AGENTS copy 2.md  AGENTS copy 3.md  AGENTS copy 4.md  AGENTS copy.md  AGENTS.md  GEMINI.md  Jimmy.md  README.md  agent-logs-2.txt  agent-logs.txt  logs.txt  opencode.json  package-lock.json  package.json  playwright.config.ts  resource-auth.md  tsconfig.json  vite.config.ts  vitest.config.ts
python-workers/: README.md  config.py  pyproject.toml  reproduce_issue.py  reproduce_traces.db  traces.db  worker.py
python-workers/agents/: __init__.py  analysis.py  coding.py  common.py  orchestrator.py  research.py  schemas.py  search.py
python-workers/docs/: agents.md  api-reference.md  examples.md  index.md  integration.md  tracing.md
python-workers/examples/: 00_instrumented.py  00_real_api.py  00_testmodel.py  01_basic.py  02_delegation.py  03_streaming.py  04_errors.py  05_concurrent.py  06_conversation.py  07_nested_traces.py  08_deep_nested_traces.py  debug_messages.py  debug_streaming.py  debug_streaming2.py  debug_streaming3.py  dump_last_tool.py  test_deepcopy.py  test_incr.py  test_streaming_tracing.py  test_usage_merge.py  test_usage_pass.py
python-workers/handlers/: __init__.py  agent_trace.py  agent_trace_deep.py  context.py
python-workers/tests/: conftest.py  test_agent_integration.py  test_handler_events.py  test_model_tracing.py  test_nested_reasoning_capture.py  test_openrouter_compat.py
python-workers/tracing/: __init__.py  collector.py  openrouter_compat.py  processor.py  spans.py  viewer.py  wrappers.py
(+150 files in other folders)
